[fix]: Remove horizontal scrollbar css

--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -16,6 +16,7 @@ body {
   background-position-x: center;
 
   transition: all 300ms ease-out;
+  overflow-x: hidden;
 }
 
 .container {
